@@ -1,4 +1,4 @@
-$NetBSD: distinfo,v 1.1.1.1 2004/06/20 19:36:56 xtraeme Exp $
+$NetBSD: distinfo,v 1.2 2004/06/21 01:34:16 xtraeme Exp $
 
-SHA1 (WebSVN_139.tar.gz) = 286b154b5d53dede88c764b601232a2949178ba8
-Size (WebSVN_139.tar.gz) = 51393 bytes
+SHA1 (WebSVN_140.tar.gz) = 251b2714b4c025b19e0ed9662e49f626e00f8380
+Size (WebSVN_140.tar.gz) = 65979 bytes
